[gd_scene load_steps=13 format=3 uid="uid://cm3fehi026x6j"]

[ext_resource type="Script" path="res://player.gd" id="1_aktdw"]
[ext_resource type="Texture2D" uid="uid://ccy36f4361d06" path="res://icon.svg" id="2_a8th4"]
[ext_resource type="Script" path="res://player/movement_controller.gd" id="3_c1y6x"]
[ext_resource type="Script" path="res://player/input_handler.gd" id="4_tqilm"]
[ext_resource type="Script" path="res://player/movement_calculator.gd" id="5_x5lhv"]
[ext_resource type="Script" path="res://player/spell_controller.gd" id="6_3jstw"]
[ext_resource type="PackedScene" uid="uid://vch6xy85vk58" path="res://spells/sorceress/Fireball.tscn" id="7_alx6w"]
[ext_resource type="PackedScene" uid="uid://7yslfrutuwmu" path="res://spells/sorceress/teleport.tscn" id="8_drb45"]
[ext_resource type="PackedScene" uid="uid://b7havihj1vby5" path="res://spells/sorceress/blizzard.tscn" id="9_kkjin"]
[ext_resource type="PackedScene" uid="uid://b4eqm84e1qin" path="res://player/UI.tscn" id="10_qqous"]
[ext_resource type="PackedScene" uid="uid://dtx5avfa3atxo" path="res://player/inventory/inventory.tscn" id="11_v0nap"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jekj"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("inventory")]
script = ExtResource("1_aktdw")
inventory = NodePath("InventoryUI")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("2_a8th4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7jekj")

[node name="MovementController" type="Node" parent="."]
script = ExtResource("3_c1y6x")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("4_tqilm")

[node name="MovementCalculator" type="Node" parent="."]
script = ExtResource("5_x5lhv")

[node name="SpellController" type="Node2D" parent="."]
script = ExtResource("6_3jstw")
fireball_scene = ExtResource("7_alx6w")
blizzard_scene = ExtResource("9_kkjin")
teleport_effect_scene = ExtResource("8_drb45")

[node name="UI" parent="." instance=ExtResource("10_qqous")]
mouse_filter = 1

[node name="InventoryUI" parent="." instance=ExtResource("11_v0nap")]
offset_left = 181.0
offset_top = -325.0
offset_right = 593.0
offset_bottom = 325.0
